# 821rc2-panic-bug

./: 821rc2-panic-bug.cabal  stack.yaml
src/: 821rc2-panic-bug.hs
