name: 821rc2-panic-bug
version: 0.0.0.1
synopsis: GHC 8.2.1 rc2 panic bug
license: MIT
license-file: LICENSE
author: Aditya Siram
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/821rc2-panic-bug
build-type: Custom
cabal-version: >=2.0.0
source-repository head
  type: git
  location: http://github.com/deech/821rc2-panic-bug

Executable 821rc2-panic-bug
  Main-Is: 821rc2-panic-bug.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*
  default-language: Haskell2010
  ghc-Options: -Wall -threaded
  ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0